tests/baselines/reference/decoratorOnClassProperty11.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts(4,5): error TS1329: This value has type '() => <T>(target: any, propertyKey: string) => void' which accepts too few arguments to be used as a decorator here. Did you mean to call it first?


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1329: This value has type '() => <T>(target: any, propertyKey: string) => void' which accepts too few arguments to be used as a decorator here. Did you mean to call it first?
    }